[package]
name = "vibe_tasks"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A vibey CLI task manager with interactive prompts and emoji support"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11.0"
console = "0.15.8"
dirs = "5.0.1"